# plugin-local

./: .releaserc.yaml  Cargo.toml  Dockerfile  Makefile  README.md  pluginmanifest.json
.github/workflows/: release.yaml  rust.yml  test.yaml
src/: constants.rs  main.rs
src/auth/: cryptography.rs  mod.rs  password_flow.rs  user.rs
src/local/: connector.rs  mod.rs  service.rs  watcher.rs
src/plugin/: dbus.rs  errors.rs  library_provider.rs  mod.rs  plugin_interface.rs  subscription_provider.rs
src/types/: app.rs  cloud_sync.rs  mod.rs  results.rs
src/utils/: date.rs  disks.rs  mod.rs  system.rs
